Bug 498268 - Last 'opened files' can't deleted any longer
Summary: Last 'opened files' can't deleted any longer
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 24.12.0
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-05 01:48 UTC by Dieter Nützel
Modified: 2025-01-28 05:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dieter Nützel 2025-01-05 01:48:55 UTC
I'm trying to delete some of the 'last opened' files.

STEPS TO REPRODUCE
1. Right click on a file which I would delete 
2. Select 'delete'
3. Click 'delete'

OBSERVED RESULT
File stay

EXPECTED RESULT
File disappear

Kate: 24.12.0
Linux
KDE Plasma Version: 6.2.4
KDE Frameworks: 6.9.0
Qt: Using 6.8.1 and built against 6.8.1
openSUSE Tumbleweed (Xcb)
Graphics Platform: X11
Build ABI: x86_64-little_endian-lp64
Kernel: linux 6.12.8-3.g4810a19-default

ADDITIONAL INFORMATION
Worked with 'former' 24.08.03' version.
Comment 1 Christoph Cullmann 2025-01-05 17:25:21 UTC
Git commit 97621a0257650f21a3158a98c1966f714ee7481e by Christoph Cullmann.
Committed on 05/01/2025 at 17:25.
Pushed by cullmann into branch 'master'.

ensure the remove action works without selection, too

M  +9    -3    apps/lib/welcomeview/welcomeview.cpp

https://invent.kde.org/utilities/kate/-/commit/97621a0257650f21a3158a98c1966f714ee7481e
Comment 2 Waqar Ahmed 2025-01-28 05:36:58 UTC
Git commit 68ecab64dccac4e504f941eb49ddf24e3e62c79a by Waqar Ahmed, on behalf of Christoph Cullmann.
Committed on 28/01/2025 at 05:35.
Pushed by waqar into branch 'release/24.12'.

ensure the remove action works without selection, too

M  +9    -3    apps/lib/welcomeview/welcomeview.cpp

https://invent.kde.org/utilities/kate/-/commit/68ecab64dccac4e504f941eb49ddf24e3e62c79a