ensure the remove action works without selection, too

BUG: 498268